# qwen-omni-emotion

./: .gitignore  main.py  pyproject.toml  requirements.txt
.cursor/rules/: architecture.mdc  project.mdc  python-style.mdc
.cursor/skills/avfoundation-capture/: SKILL.md
.cursor/skills/emotion-implementation-workflow/: SKILL.md
.cursor/skills/macos-vision-detection/: SKILL.md
.cursor/skills/qwen-omni-inference/: SKILL.md
Doc/: Animation.md  PRD_V1.md  VIBE_CODING_PROMPT.md
configs/: default.yaml  model.yaml  pipeline.yaml
scripts/: benchmark_batch.py  diagnose_camera.py  diagnose_rtsp.py  download_model.py  measure_memory.py  measure_tokens.py  test_robot_send.py  test_web_dashboard.py  validate_capabilities.py
src/: __init__.py
src/capture/: __init__.py  audio_capture.py  rtsp_capture.py  stream_buffer.py  video_capture.py
src/model/: __init__.py  base.py  factory.py  qwen_omni.py
src/model/backends/: __init__.py  mlx_backend.py  (+1 more)
src/pipeline/: __init__.py  realtime_pipeline.py
src/preprocessing/: __init__.py  frame_sampler.py  roi_extractor.py
src/prompts/: __init__.py  output_schema.py  system_prompt.py  task_prompts.py
src/robot/: README.md  __init__.py  action_name_mapping.py  action_scheduler.py  config.py
src/understanding/: __init__.py  response_parser.py  state_tracker.py
src/utils/: __init__.py  logger.py
src/visualization/: __init__.py  web_server.py
tests/: test_action_scheduler.py  test_capture.py  test_model.py  test_pipeline.py  test_preprocessing.py  test_prompts.py  test_understanding.py  test_utils.py
(+6 files in other folders)
