[project]
name = "qwen-omni-emotion"
version = "0.1.0"
description = "基于 Qwen2.5-Omni-3B 的实时人机交互与情绪理解系统 (Mac Studio M3 Ultra)"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
